Fixed an error due to a pip dependency

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 .env
+venv/
+.venv/
+.venv
 
 
 # Ignorar todos los md y html de la carpeta "Base de datos"
 Base de datos/*.md
 Base de datos/*.html
+# Ignorar los .pkl de la carpeta "Indice"
+Indice/*.pkl
