--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-sentence-transformers
-scikit-learn
-numpy
-pickle
+sentence-transformers==3.4.1
+scikit-learn==1.6.1
+numpy==2.0.2
+pickleshare==0.7.5
+jsonpickle==4.0.2
