--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 sentence-transformers==3.4.1
 scikit-learn==1.6.1
 numpy==2.0.2
+pandas==2.2.2
+openpyxl==3.1.5
+unidecode
 pickleshare==0.7.5
 jsonpickle==4.0.2
 dotenv
