--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ venv/
 # Ignorar todos los md y html de la carpeta "Base de datos"
 Base de datos/*.md
 Base de datos/*.html
+Base de datos
+Base de datos_Cosmere
 # Ignorar todos los .pkl
 *.pkl
 # Ignorar todos los .xlsx
