--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@ venv/
 
 # Ignorar todos los md y html de la carpeta "Base de datos"
 Base de datos RAG general
-Base de datos_Cosmere/*
+Base de datos_Cosmere/*.md
+Base de datos_Cosmere/*.html
 # Ignorar todos los .pkl
 *.pkl
 # Ignorar todos los .xlsx
